# couplnorm

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 01_basic_usage.ipynb  02_reproduce_paper.ipynb  03_coupling_as_loss.ipynb
src/couplnorm/: __init__.py  coupling.py  plotting.py  samplers.py
src/couplnorm/models/: __init__.py  fourier.py  gaussian.py  maf.py  pca.py
tests/: test_coupling.py  test_models.py  test_reproducibility.py  test_samplers.py
tests/data/: README.md  phi4_reference.pt
